--- a/FeriadosAPI/FeriadosAPI/appsettings.json
+++ b/FeriadosAPI/FeriadosAPI/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SqlServer": "Server=host.docker.internal,1433;Database=ControlePessoal2;User ID=sa;Password=q1w2e3r4t5"
+  }
 }
